Downgrade Java for client libraries to 8 Closes #33051
Signed-off-by: rmartinc <rmartinc@redhat.com>